# koffice-musicshape

./: CMakeLists.txt
musicshape/: CMakeLists.txt  Engraver.cpp  MusicShape.cpp  MusicShape.h  MusicShapeFactory.cpp  MusicShapeFactory.h  MusicTool.cpp  MusicTool.h  MusicToolFactory.cpp  MusicToolFactory.h  Renderer.cpp  SimpleEntryTool.cpp  SimpleEntryTool.h  SimpleEntryToolFactory.cpp  SimpleEntryToolFactory.h  musicshape.desktop
musicshape/actions/: AbstractMusicAction.cpp  AbstractMusicAction.h  AbstractNoteMusicAction.cpp  AbstractNoteMusicAction.h  AccidentalAction.cpp  DotsAction.cpp  EraserAction.cpp  KeySignatureAction.cpp  KeySignatureAction.h  NoteEntryAction.cpp  RemoveBarAction.cpp  RemoveBarAction.h  SelectionAction.cpp  SelectionAction.h  SetClefAction.cpp  TiedNoteAction.cpp  TiedNoteAction.h  TimeSignatureAction.cpp  TimeSignatureAction.h
musicshape/commands/: ChangePartDetailsCommand.cpp  SetClefCommand.cpp  SetKeySignatureCommand.cpp  SetTimeSignatureCommand.cpp
musicshape/core/: Bar.cpp  Bar.h  Chord.cpp  Chord.h  Clef.cpp  Clef.h  Global.h  KeySignature.cpp  KeySignature.h  MusicXmlReader.cpp  MusicXmlReader.h  MusicXmlWriter.cpp  MusicXmlWriter.h  Note.h  Part.cpp  Part.h  PartGroup.cpp  PartGroup.h  Sheet.cpp  Sheet.h  Staff.cpp  StaffElement.h  TimeSignature.cpp  TimeSignature.h  VoiceBar.cpp  VoiceBar.h  VoiceElement.h
musicshape/core/tests/: CMakeLists.txt
musicshape/dialogs/: KeySignatureDialog.h  PartDetailsDialog.cpp  PartDetailsDialog.h  PartsListModel.cpp  PartsWidget.cpp  SimpleEntryWidget.cpp  StaffElementPreviewWidget.cpp  StaffElementPreviewWidget.h
musicshape/tests/: CMakeLists.txt  MusicWidget.h  MusicXmlWriterTest.cpp  SheetTest.cpp  VoiceBarTest.cpp
